test/files/neg/t11921b.check
test.scala:13: error: reference to x is ambiguous;
it is both defined in method f and available as value x in class C
        new D { override def y = x }      // ambiguous
                                 ^
test.scala:12: warning: parameter value x in method f is never used
      def f(x: Int) = {                   // unused
            ^
1 warning
1 error
